src/objects/EEC_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>A custom setting containing EEC configuration.</description>
    <fields>
        <fullName>Portal_Url__c</fullName>
        <label>Portal Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Secure_Param_Key__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Secure Param Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>googleMapsApiKey__c</fullName>
        <description>API key for google geocoding</description>
        <label>googleMapsApiKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EEC Config</label>
</CustomObject>